# jpacTriangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
executables/: compare.cpp  dispersive_test.cpp  feynman_test.cpp  plot_omega.cpp  plot_triangle.cpp
include/: breit_wigner.hpp  constants.hpp  dispersive_triangle.hpp  feynman_triangle.hpp  inhomogeneity.hpp  lefthand_cut.hpp  propagator.hpp  quantum_numbers.hpp  rational_integrals.hpp  scalar_triangle.hpp  t_integral.hpp  triangle.hpp  triangle_plotter.hpp  utilities.hpp
include/dispersive/: dispersive_triangle.hpp  projection_function.hpp
include/feynman/: dF3_integrand.hpp  feynman_triangle.hpp  rational_integrals.hpp  triangle_function.hpp
src/: breit_wigner.cpp  scalar_triangle.cpp  t_integral.cpp  triangle.cpp  utilities.cpp
src/dispersive/: dispersive_triangle.cpp  projection_function.cpp  projection_functions.cpp
src/feynman/: dF3_integrand.cpp  feynman_triangle.cpp  mP_functions.cpp  mT_functions.cpp  rational_integrals.cpp  triangle_function.cpp  two_point_functions.cpp
